Group 3 dots menu fix - move and wrap 3dots cmp inside GroupTitleHeader, modify css and z-index to all relevant elements

--- a/src/assets/styles/cmps/SideBar.scss
+++ b/src/assets/styles/cmps/SideBar.scss
@@ -110,7 +110,6 @@
     &::after {
         content: "";
         background-color: $clr-table-bg;
-        // background-color: red;
         position: absolute;
         top: 48px;
         // top: 32px;
@@ -118,8 +117,8 @@
         height: calc(100% - 4rem);
         border-top-left-radius: 0.5rem;
         width: 40px;
-        z-index: 13;
-        z-index: 14;
+        
+        z-index: 8;
     }
 
 }
