--- a/src/assets/styles/cmps/pulse/PulsePreview.scss
+++ b/src/assets/styles/cmps/pulse/PulsePreview.scss
@@ -12,6 +12,7 @@
         box-shadow: 4px 3px 6px -3px $clr-table-shadow;
         cursor: pointer;
         z-index: 11;
+        z-index: 5;
 
         .label-picker-container {
             opacity: 0.8;
@@ -39,6 +40,7 @@
         display: flex;
         @include stickyHorizontalTable();
         z-index: 10;
+        z-index: 4;
 
         &:hover {
             background-color: $clr-pulse-hover;
@@ -52,6 +54,7 @@
 
     &:focus-within {
         z-index: 12;
+        z-index: 6;
         background-color: $clr-btn-active-bg;
     }
 }
